# rup

./: Cargo.toml  PKGBUILD  README.md  build.js  build.sh  installer.nsi
builds/: checksums.txt  rup-1.0.2-1-x86_64.pkg.tar.zst  rup_1.0.2-1_amd64.deb
debian/: changelog  control  rules
src/: cli.rs  config.rs  lib.rs  main.rs  status.rs  upload.rs
src/api/: bashupload.rs  litterbox.rs  mod.rs  temp_sh.rs  uguu.rs
